View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026457 | Open CASCADE | OCCT:Foundation Classes | public | 2015-07-17 15:58 | 2016-04-20 15:49 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026457: Failed build with OCCT_DEBUG enabled | ||||
Description | After integration of 0024023, some debug code enabled when macro OCCT_DEBUG is defined becomes non-compilable, due to absence of cast of opencascade::handle<> to pointer. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
related to | 0024023 | closed | Revamp the OCCT Handle |
occt: master 1c29294e 2015-07-17 16:20:06
Committer: abv Details Diff |
0026457: Failed build with OCCT_DEBUG enabled Debug code enabled with OCCT_DEBUG macro corrected for compiling with new handles. QANCollection_Handle.cxx simplified so as to avoid need of using /bigobj option when building by Visual Studio; templates of project files, CMake projects, and test perf fclasses handle corrected accordingly. Script genproj corrected to recognize VTK and to build DRAWEXE as executable (rather than DLL). |
Affected Issues 0026457 |
|
mod - adm/genproj.tcl | Diff File | ||
mod - adm/templates/template.vc10 | Diff File | ||
mod - adm/templates/template.vc11 | Diff File | ||
mod - adm/templates/template.vc12 | Diff File | ||
mod - adm/templates/template.vc9 | Diff File | ||
mod - src/DNaming/DNaming_RevolutionDriver.cxx | Diff File | ||
mod - src/DNaming/DNaming_SelectionDriver.cxx | Diff File | ||
mod - src/QANCollection/QANCollection_Handle.cxx | Diff File | ||
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx | Diff File | ||
mod - src/STEPConstruct/STEPConstruct_ValidationProps.cxx | Diff File | ||
mod - src/TKQADraw/CMakeLists.txt | Diff File | ||
mod - src/TNaming/TNaming.cxx | Diff File | ||
mod - src/TopoDSToStep/TopoDSToStep_MakeStepFace.cxx | Diff File | ||
mod - src/UnitsAPI/UnitsAPI.cxx | Diff File | ||
mod - tests/perf/fclasses/handle | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-17 15:58 |
|
New Issue | |
2015-07-17 15:58 |
|
Assigned To | => abv |
2015-07-17 15:59 |
|
Summary | Feiled build with OCCT_DEBUG enabled => Failed build with OCCT_DEBUG enabled |
2015-07-17 15:59 |
|
Relationship added | related to 0024023 |
2015-07-23 11:55 |
|
Changeset attached | => occt master 1c29294e |
2015-07-23 11:55 |
|
Status | new => verified |
2015-07-23 11:55 |
|
Resolution | open => fixed |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |