src/UnitsAPI/UnitsAPI.cxx
@@ -359,7 +359,7 @@ Standard_Real UnitsAPI::AnyToLS(const Standard_Real aData,
   }
 #ifdef OCCT_DEBUG
   else
-    cout<<"Warning: BAD Quantity returns in UnitsAPI::AnyToLS(" << aData << "," << aUnit << "," << aDim << ")" << endl;
+    cout<<"Warning: BAD Quantity returns in UnitsAPI::AnyToLS(" << aData << "," << aUnit << "," << aDim.get() << ")" << endl;
 #endif
   return aValue;
 }
